# SigilDERG-Finetuner

./: .gitignore  CHANGELOG.md  EVALUATION.txt  LICENSE  MANIFEST.in  OPTIMIZATION_GUIDE.md  PRODUCTION_READINESS.md  README.md  RELEASE_NOTES_v2.0.0.md  SECURITY.md  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py  training_setup.sh
.github/workflows/: ci.yml
docs/: SETUP.md
docs/adr/: ADR-001-qlora-architecture.md  ADR-002-two-phase-training.md  ADR-003-dataset-pipeline.md  ADR-004-h100-optimizations.md  README.md  template.md
docs/runbooks/: README.md  evaluation-workflow.md  training-execution.md  troubleshooting.md
notebooks/: sigilderg-phase-1-wandb.ipynb
rust-qlora/: Dockerfile.eval  Dockerfile.eval.test  __init__.py  checkpoint_files.md  config_models.py  data_filters.py  eval_rust.py  eval_sandbox.py  eval_template.py  expert_iteration.py  gen_eval_samples.py  hyperparameter_sweep.py  infer_export.py  inspect_checkpoint.py  push_model_card.py  rlaif_lite.py  train.py  update_model_card_eval.py
rust-qlora/configs/: llama8b-phase1.yml  llama8b-phase2.yml  llama8b.yml
rust-qlora/dataset_utils/: __init__.py  jsonl_loader.py  loader.py
rust-qlora/scripts/: checkpoint_eval_workflow.sh  launch_tensorboard.sh  launch_tmux.sh  run_eval_loop.sh  run_phase2.sh  run_train.sh  upload_checkpoints.py
tests/: __init__.py  conftest.py  test_config_models.py  test_data_filters.py  test_integration.py  test_jsonl_loader.py  test_properties.py
